[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Matt Koski",email = "maccam912@gmail.com"},
]
dependencies = [
    "litestar[standard]>=2.2.1",
    "ortools>=9.7.2996",
    "pandas>=2.1.0",
    "pydantic>=2.4.2",
    "setuptools>=68.2.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

